--- a/Visualisateur/src/exoplanete.fxml
+++ b/Visualisateur/src/exoplanete.fxml
@@ -15,5 +15,6 @@
       </font>
     </Label>
     <TextArea id="exoplanete" fx:id="exoplanete" editable="false" layoutX="38.0" layoutY="95.0" prefHeight="257.0" prefWidth="531.0" style=" -fx-background-color: palegoldenrod;" wrapText="true" />
+    <Button id="actionNaviguerPageExoplanete" layoutX="169.0" layoutY="350" mnemonicParsing="false" text="Revenir à la liste des Exoplanètes" />
   </children>
 </AnchorPane>
