Navigation entre les deux pages et separation de l'initialisation dans le controleur

--- a/Visualisateur/src/visualisateur/vue/liste-exoplanetes.fxml
+++ b/Visualisateur/src/visualisateur/vue/liste-exoplanetes.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="visualisateur.action.ControleurExoplanete">
   <children>
     <Label layoutX="38.0" layoutY="41.0" prefHeight="40.0" prefWidth="399.0" text="Liste des exoplanètes" textFill="#992500">
       <font>
@@ -15,6 +15,6 @@
       </font>
     </Label>
     <TextArea id="liste-exoplanetes" fx:id="listeExoplanetes" editable="false" layoutX="38.0" layoutY="95.0" prefHeight="257.0" prefWidth="531.0" style=" -fx-background-color: palegoldenrod;" wrapText="true" />
-    <Button id="actionNaviguerPageExoplanete" layoutX="169.0" layoutY="43.0" mnemonicParsing="false" text="Ouvrir la page Exoplanete" />
+    <Button id="actionNaviguerPageExoplanete" layoutX="169.0" layoutY="350.0" mnemonicParsing="false" text="Ouvrir la page Exoplanete"  onAction="#recevoirActionNaviguerPageExoplanete"/>
   </children>
 </AnchorPane>
