--- a/Visualisateur/src/visualisateur/vue/exoplanete.fxml
+++ b/Visualisateur/src/visualisateur/vue/exoplanete.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="visualisateur.action.ControleurExoplanete">
   <children>
     <Label layoutX="38.0" layoutY="41.0" prefHeight="40.0" prefWidth="399.0" text="Exoplanète" textFill="#992500">
       <font>
@@ -15,6 +15,6 @@
       </font>
     </Label>
     <TextArea id="exoplanete" fx:id="exoplanete" editable="false" layoutX="38.0" layoutY="95.0" prefHeight="257.0" prefWidth="531.0" style=" -fx-background-color: palegoldenrod;" wrapText="true" />
-    <Button id="actionNaviguerPageExoplanete" layoutX="169.0" layoutY="350" mnemonicParsing="false" text="Revenir à la liste des Exoplanètes" />
+    <Button id="actionNaviguerPageListeExoplanete" layoutX="169.0" layoutY="350" mnemonicParsing="false" text="Revenir à la liste des Exoplanètes" onAction="#recevoirActionNaviguerPageListeExoplanete"/>
   </children>
 </AnchorPane>
