--- a/Editeur/bin/editeur/vue/liste-exoplanetes.fxml
+++ b/Editeur/bin/editeur/vue/liste-exoplanetes.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="549.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="visualisateur.action.ControleurExoplanete">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="549.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="editeur.action.ControleurExoplanete">
   <children>
     <Label layoutX="38.0" layoutY="41.0" prefHeight="40.0" prefWidth="399.0" text="Liste des exoplanètes" textFill="#992500">
       <font>
