Naviguer vers le formulaire ajouter

--- a/Editeur/src/editeur/vue/ajouter-exoplanete.fxml
+++ b/Editeur/src/editeur/vue/ajouter-exoplanete.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="677.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="677.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2"  fx:controller="editeur.action.ControleurExoplanete">
   <children>
     <Label layoutX="47.0" layoutY="31.0" style="-fx-text-fill:blue;&#10;-fx-font-family: &quot;Segoe UI Semibold&quot;;" text="Ajouter une exoplanète">
       <font>
