--- a/Visualisateur/src/visualisateur/vue/liste-exoplanetes.fxml
+++ b/Visualisateur/src/visualisateur/vue/liste-exoplanetes.fxml
@@ -14,7 +14,7 @@
         <Font name="System Bold" size="30.0" />
       </font>
     </Label>
-    <TextArea id="liste-exoplanetes" fx:id="listeExoplanetes" editable="false" layoutX="38.0" layoutY="95.0" prefHeight="257.0" prefWidth="531.0" style=" -fx-background-color: palegoldenrod;" wrapText="true" />
+    <ListView id="liste-exoplanetes" layoutX="38.0" layoutY="163.0" prefHeight="200.0" prefWidth="200.0" />
     <Button id="actionNaviguerPageExoplanete" layoutX="169.0" layoutY="350.0" mnemonicParsing="false" text="Ouvrir la page Exoplanete"  onAction="#recevoirActionNaviguerPageExoplanete"/>
   </children>
 </AnchorPane>
