--- a/Visualisateur/src/visualisateur/vue/exoplanete.fxml
+++ b/Visualisateur/src/visualisateur/vue/exoplanete.fxml
@@ -14,7 +14,11 @@
         <Font name="System Bold" size="30.0" />
       </font>
     </Label>
-    <TextArea id="exoplanete" fx:id="exoplanete" editable="false" layoutX="38.0" layoutY="95.0" prefHeight="257.0" prefWidth="531.0" style=" -fx-background-color: palegoldenrod;" wrapText="true" />
-    <Button id="actionNaviguerPageListeExoplanete" layoutX="169.0" layoutY="350" mnemonicParsing="false" text="Revenir à la liste des Exoplanètes" onAction="#recevoirActionNaviguerPageListeExoplanete"/>
+        <VBox layoutX="25.0" layoutY="44.0" prefHeight="310.0" prefWidth="451.0">
+          <children>
+		    <TextArea id="exoplanete" fx:id="exoplanete" editable="false" layoutX="38.0" layoutY="95.0" prefHeight="257.0" prefWidth="531.0" style=" -fx-background-color: palegoldenrod;" wrapText="true" />
+		    <Button id="actionNaviguerPageListeExoplanete" layoutX="169.0" layoutY="350" mnemonicParsing="false" text="Revenir à la liste des Exoplanètes" onAction="#recevoirActionNaviguerPageListeExoplanete"/>
+          </children>
+        </VBox>
   </children>
 </AnchorPane>
